--- a/app/src/main/res/drawable/ic_note_unfill.xml
+++ b/app/src/main/res/drawable/ic_note_unfill.xml
@@ -1,18 +1,370 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="381dp"
-    android:height="381dp"
-    android:viewportWidth="381.53418"
-    android:viewportHeight="381">
+    android:width="279dp"
+    android:height="303dp"
+    android:viewportWidth="279"
+    android:viewportHeight="303">
   <path
-      android:fillColor="#FF000000"
-      android:pathData="m370.59,231.965c-5.523,0 -10,4.477 -10,10v88.793c-0.02,16.559 -13.438,29.98 -30,30h-280.59c-16.563,-0.02 -29.98,-13.441 -30,-30v-260.59c0.02,-16.563 13.438,-29.98 30,-30h88.789c5.523,0 10,-4.477 10,-10 0,-5.523 -4.477,-10 -10,-10h-88.789c-27.602,0.031 -49.969,22.398 -50,50v260.59c0.031,27.602 22.398,49.969 50,50h280.59c27.602,-0.031 49.969,-22.398 50,-50v-88.789c0,-5.523 -4.477,-10.004 -10,-10.004zM370.59,231.965"/>
+      android:pathData="M0,0L0,303L279,303L279,0L0,0z"
+      android:fillColor="#ffffff"
+      android:strokeColor="#00000000"/>
   <path
-      android:fillColor="#FF000000"
-      android:pathData="m156.367,179.344 l146.012,-146.016 47.09,47.09 -146.012,146.016zM156.367,179.344"/>
+      android:pathData="M68,4L68,5L72,5L68,4z"
+      android:fillColor="#a5a3a4"
+      android:strokeColor="#00000000"/>
   <path
-      android:fillColor="#FF000000"
-      android:pathData="m132.543,250.258 l52.039,-14.414 -37.625,-37.625zM132.543,250.258"/>
+      android:pathData="M208,4L208,5L213,5L208,4z"
+      android:fillColor="#b1b0b0"
+      android:strokeColor="#00000000"/>
   <path
-      android:fillColor="#FF000000"
-      android:pathData="m362.488,8.578c-9.77,-9.746 -25.586,-9.746 -35.355,0l-10.605,10.605 47.09,47.09 10.605,-10.605c9.75,-9.77 9.75,-25.586 0,-35.355zM362.488,8.578"/>
+      android:pathData="M67.519,6.032C60.527,10.395 60.914,35.002 63.603,41.981C65.445,46.76 71.593,48.269 75.852,45.682C81.733,42.11 80.402,17.154 78.486,11.019C77.176,6.823 71.7,3.422 67.519,6.032z"
+      android:fillColor="#231f20"
+      android:strokeColor="#00000000"/>
+  <path
+      android:pathData="M73,5L73,6L76,6L73,5z"
+      android:fillColor="#908f8f"
+      android:strokeColor="#00000000"/>
+  <path
+      android:pathData="M203,13L204,13C207.242,6.13 211.4,6.259 218,8C212.457,2.34 204.187,5.333 203,13z"
+      android:fillColor="#595858"
+      android:strokeColor="#00000000"/>
+  <path
+      android:pathData="M65,6C59.741,14.656 62,27.162 62,37L63,37C63,26.069 61.649,15.808 67,6L65,6z"
+      android:fillColor="#797878"
+      android:strokeColor="#00000000"/>
+  <path
+      android:pathData="M220,9C203.304,1.238 204.288,15.659 203.985,28C203.866,32.887 201.398,39.429 204.742,43.722C210.031,50.509 219.771,45.731 219.917,38C219.986,34.331 219.048,30.687 219.004,27C218.932,20.927 218.889,14.985 220,9z"
+      android:fillColor="#231f20"
+      android:strokeColor="#00000000"/>
+  <path
+      android:pathData="M77,7L79,10L77,7z"
+      android:fillColor="#676666"
+      android:strokeColor="#00000000"/>
+  <path
+      android:pathData="M79,10L79,40L80,40L79,10z"
+      android:fillColor="#515050"
+      android:strokeColor="#00000000"/>
+  <path
+      android:pathData="M220,10L220,34L221,34L220,10z"
+      android:fillColor="#a09f9f"
+      android:strokeColor="#00000000"/>
+  <path
+      android:pathData="M202,11L202,34L203,34L202,11z"
+      android:fillColor="#8d8c8c"
+      android:strokeColor="#00000000"/>
+  <path
+      android:pathData="M219,11L219,34L220,34L219,11z"
+      android:fillColor="#4c4b4b"
+      android:strokeColor="#00000000"/>
+  <path
+      android:pathData="M61,12L61,40L62,40L61,12z"
+      android:fillColor="#e4e4e4"
+      android:strokeColor="#00000000"/>
+  <path
+      android:pathData="M80,12L80,40L81,40L80,12z"
+      android:fillColor="#c4c4c4"
+      android:strokeColor="#00000000"/>
+  <path
+      android:pathData="M203,13L203,34L204,34L203,13z"
+      android:fillColor="#3a3838"
+      android:strokeColor="#00000000"/>
+  <path
+      android:pathData="M17,24L17,25L53,25C43.44,20.989 27.387,24 17,24M90,24L90,25L194,25L162,24L90,24z"
+      android:fillColor="#d5d5d5"
+      android:strokeColor="#00000000"/>
+  <path
+      android:pathData="M229,24L229,34L230,34L230,25L259,25L229,24z"
+      android:fillColor="#aeaeae"
+      android:strokeColor="#00000000"/>
+  <path
+      android:pathData="M15.667,25.333L16.333,25.667L15.667,25.333z"
+      android:fillColor="#afafaf"
+      android:strokeColor="#00000000"/>
+  <path
+      android:pathData="M17,25L17,26L52,26L52,41L53,41L53,25L17,25z"
+      android:fillColor="#717171"
+      android:strokeColor="#00000000"/>
+  <path
+      android:pathData="M53,25L53,41L54,41L53,25z"
+      android:fillColor="#e4e4e4"
+      android:strokeColor="#00000000"/>
+  <path
+      android:pathData="M89,25L89,42L90,42L89,25z"
+      android:fillColor="#919090"
+      android:strokeColor="#00000000"/>
+  <path
+      android:pathData="M90,25L90,26L193,26L162,25L90,25z"
+      android:fillColor="#717171"
+      android:strokeColor="#00000000"/>
+  <path
+      android:pathData="M193,25L193,33L194,33L193,25z"
+      android:fillColor="#8f8e8e"
+      android:strokeColor="#00000000"/>
+  <path
+      android:pathData="M230,25L230,34L231,34L231,26L263,27C256.029,21.719 238.63,25 230,25z"
+      android:fillColor="#3b3b3b"
+      android:strokeColor="#00000000"/>
+  <path
+      android:pathData="M262.667,25.333L263.333,25.667L262.667,25.333z"
+      android:fillColor="#bdbdbd"
+      android:strokeColor="#00000000"/>
+  <path
+      android:pathData="M13.667,26.333L14.333,26.667L13.667,26.333z"
+      android:fillColor="#898989"
+      android:strokeColor="#00000000"/>
+  <path
+      android:pathData="M15,26L15,27L51,27L51,28C38.1,28 15.051,23.197 7.148,36.004C3.927,41.224 5,48.126 5,54L5,91L5,233L5,273C5,279.423 4.19,286.53 8.499,291.895C13.702,298.373 21.523,298 29,298L72,298C133.752,298 196.332,300.985 258,297.96C265.274,297.603 271.681,293.346 273.467,286C277.992,267.384 274,243.172 274,224L274,85C274,71.977 279.158,44.505 270.606,34.043C262.355,23.95 242.682,28 231,28C230.714,34.654 229.882,42.609 225.606,47.985C217.228,58.516 203.047,57.968 196.225,45.999C192.642,39.715 193,32.966 193,26L91,26L91,42L88,42C84.857,55.218 69.008,60.012 59.188,50.671C52.101,43.93 52,35.012 52,26L15,26z"
+      android:fillColor="#231f20"
+      android:strokeColor="#00000000"/>
+  <path
+      android:pathData="M90,26L90,42L91,42L90,26z"
+      android:fillColor="#413f40"
+      android:strokeColor="#00000000"/>
+  <path
+      android:pathData="M231,26L231,28C243.444,28 261.923,24.079 270.606,35.015C279.224,45.871 274,73.602 274,87L274,225C274,243.565 277.849,266.971 273.467,285C271.605,292.661 264.631,297.585 257,297.96C195.995,300.953 134.088,298 73,298L31,298C22.982,298 15.136,298.461 9.275,291.895C4.272,286.291 5,278.964 5,272L5,233L5,92L5,55C5,49.11 3.941,42.244 7.148,37.001C15.514,23.323 37.294,28 51,28C38.817,22.888 9.41,24.286 3.858,38C1.76,43.182 3,50.499 3,56L3,94L3,228L3,273C3,282.977 3.064,292.79 13.09,298.427C18.106,301.248 25.449,300 31,300L70,300L216,300C231.941,300 266.594,306.894 274.86,288.996C277.235,283.856 276,276.534 276,271L276,233L276,97L276,55C276,49.049 277.278,41.343 274.146,36.001C265.797,21.762 244.949,26 231,26z"
+      android:fillColor="#151313"
+      android:strokeColor="#00000000"/>
+  <path
+      android:pathData="M263,26L263,27L269,29L269,28L263,26z"
+      android:fillColor="#757575"
+      android:strokeColor="#00000000"/>
+  <path
+      android:pathData="M5,35L13,27L5,35z"
+      android:fillColor="#474747"
+      android:strokeColor="#00000000"/>
+  <path
+      android:pathData="M269,29L273,34L269,29z"
+      android:fillColor="#434343"
+      android:strokeColor="#00000000"/>
+  <path
+      android:pathData="M193,33L193,40L194,40L193,33z"
+      android:fillColor="#666464"
+      android:strokeColor="#00000000"/>
+  <path
+      android:pathData="M273,33L275,36L273,33z"
+      android:fillColor="#737373"
+      android:strokeColor="#00000000"/>
+  <path
+      android:pathData="M4,34L3,38L4,38L4,34z"
+      android:fillColor="#888888"
+      android:strokeColor="#00000000"/>
+  <path
+      android:pathData="M202,34L202,41L203,41L202,34z"
+      android:fillColor="#626060"
+      android:strokeColor="#00000000"/>
+  <path
+      android:pathData="M220,34L220,40L221,40L220,34z"
+      android:fillColor="#5d5a5b"
+      android:strokeColor="#00000000"/>
+  <path
+      android:pathData="M229,34L229,40L230,40L229,34z"
+      android:fillColor="#6e6c6c"
+      android:strokeColor="#00000000"/>
+  <path
+      android:pathData="M275,36L276,40L277,40L275,36z"
+      android:fillColor="#929292"
+      android:strokeColor="#00000000"/>
+  <path
+      android:pathData="M62,37L62,41L63,41L62,37z"
+      android:fillColor="#4a4748"
+      android:strokeColor="#00000000"/>
+  <path
+      android:pathData="M2.333,38.667L2.667,39.333L2.333,38.667z"
+      android:fillColor="#959595"
+      android:strokeColor="#00000000"/>
+  <path
+      android:pathData="M2,40L2,142L3,142L3,71L2,40z"
+      android:fillColor="#565656"
+      android:strokeColor="#00000000"/>
+  <path
+      android:pathData="M79.333,40.667L79.667,41.333L79.333,40.667z"
+      android:fillColor="#8a8889"
+      android:strokeColor="#00000000"/>
+  <path
+      android:pathData="M220.333,40.667L220.667,41.333L220.333,40.667z"
+      android:fillColor="#cbcaca"
+      android:strokeColor="#00000000"/>
+  <path
+      android:pathData="M276,40L276,285L277,285L277,112L277,63L276,40z"
+      android:fillColor="#565656"
+      android:strokeColor="#00000000"/>
+  <path
+      android:pathData="M277,40L277,285L278,285L278,112L278,63L277,40z"
+      android:fillColor="#b2b2b2"
+      android:strokeColor="#00000000"/>
+  <path
+      android:pathData="M1,41L1,142L2,142L2,72L1,41z"
+      android:fillColor="#bababa"
+      android:strokeColor="#00000000"/>
+  <path
+      android:pathData="M219,42L220,43L219,42z"
+      android:fillColor="#878585"
+      android:strokeColor="#00000000"/>
+  <path
+      android:pathData="M228.333,42.667L228.667,43.333L228.333,42.667z"
+      android:fillColor="#727070"
+      android:strokeColor="#00000000"/>
+  <path
+      android:pathData="M87.333,44.667L87.667,45.333L87.333,44.667z"
+      android:fillColor="#767374"
+      android:strokeColor="#00000000"/>
+  <path
+      android:pathData="M76,45L77,46L76,45z"
+      android:fillColor="#8f8e8e"
+      android:strokeColor="#00000000"/>
+  <path
+      android:pathData="M55,46L56,47L55,46z"
+      android:fillColor="#908e8f"
+      android:strokeColor="#00000000"/>
+  <path
+      android:pathData="M207.667,46.333L208.333,46.667L207.667,46.333z"
+      android:fillColor="#636061"
+      android:strokeColor="#00000000"/>
+  <path
+      android:pathData="M69,47L69,48L73,48L69,47z"
+      android:fillColor="#b3b1b2"
+      android:strokeColor="#00000000"/>
+  <path
+      android:pathData="M196,47L197,48L196,47z"
+      android:fillColor="#979595"
+      android:strokeColor="#00000000"/>
+  <path
+      android:pathData="M209,47L209,48L214,48L209,47z"
+      android:fillColor="#b4b3b3"
+      android:strokeColor="#00000000"/>
+  <path
+      android:pathData="M226,47L227,48L226,47z"
+      android:fillColor="#939292"
+      android:strokeColor="#00000000"/>
+  <path
+      android:pathData="M85,48L86,49L85,48z"
+      android:fillColor="#929090"
+      android:strokeColor="#00000000"/>
+  <path
+      android:pathData="M57,49L58,50L57,49z"
+      android:fillColor="#848282"
+      android:strokeColor="#00000000"/>
+  <path
+      android:pathData="M58,50L59,51L58,50z"
+      android:fillColor="#8f8d8d"
+      android:strokeColor="#00000000"/>
+  <path
+      android:pathData="M59,51L60,52L59,51z"
+      android:fillColor="#817f7f"
+      android:strokeColor="#00000000"/>
+  <path
+      android:pathData="M81,52L82,53L81,52z"
+      android:fillColor="#838081"
+      android:strokeColor="#00000000"/>
+  <path
+      android:pathData="M66,55L66,56L74,56L66,55z"
+      android:fillColor="#bdbcbc"
+      android:strokeColor="#00000000"/>
+  <path
+      android:pathData="M74.667,55.333L75.333,55.667L74.667,55.333z"
+      android:fillColor="#6d6a6b"
+      android:strokeColor="#00000000"/>
+  <path
+      android:pathData="M206.667,55.333L207.333,55.667L206.667,55.333z"
+      android:fillColor="#777474"
+      android:strokeColor="#00000000"/>
+  <path
+      android:pathData="M208,55L208,56L214,56L208,55z"
+      android:fillColor="#bebdbe"
+      android:strokeColor="#00000000"/>
+  <path
+      android:pathData="M214.667,55.333L215.333,55.667L214.667,55.333z"
+      android:fillColor="#797677"
+      android:strokeColor="#00000000"/>
+  <path
+      android:pathData="M32,67L32,281L33,281L33,130L33,87L32,67z"
+      android:fillColor="#5f5d5d"
+      android:strokeColor="#00000000"/>
+  <path
+      android:pathData="M33,67L33,68L246,68L226,67L183,67L33,67z"
+      android:fillColor="#c7c6c6"
+      android:strokeColor="#00000000"/>
+  <path
+      android:pathData="M246,67L246,281L247,281L247,130L247,87L246,67z"
+      android:fillColor="#7a7778"
+      android:strokeColor="#00000000"/>
+  <path
+      android:pathData="M33,68L33,281L246,281L246,68L33,68z"
+      android:fillColor="#ffffff"
+      android:strokeColor="#00000000"/>
+  <path
+      android:pathData="M3,141C-1.018,154.594 2,172.821 2,187L4,187C4,173.997 8.01,152.939 3,141z"
+      android:fillColor="#000000"
+      android:strokeColor="#00000000"/>
+  <path
+      android:pathData="M1,142L1,187L2,187C2,174.258 5.91,153.701 1,142z"
+      android:fillColor="#7b7b7b"
+      android:strokeColor="#00000000"/>
+  <path
+      android:pathData="M1,187L1,284L2,284L2,217L1,187z"
+      android:fillColor="#bababa"
+      android:strokeColor="#00000000"/>
+  <path
+      android:pathData="M2,187L2,285L3,285L3,217L2,187z"
+      android:fillColor="#565656"
+      android:strokeColor="#00000000"/>
+  <path
+      android:pathData="M33,281L33,282L246,282L226,281L183,281L33,281z"
+      android:fillColor="#7d7b7b"
+      android:strokeColor="#00000000"/>
+  <path
+      android:pathData="M2.333,285.667L2.667,286.333L2.333,285.667z"
+      android:fillColor="#9e9e9e"
+      android:strokeColor="#00000000"/>
+  <path
+      android:pathData="M276.333,285.667L276.667,286.333L276.333,285.667z"
+      android:fillColor="#9a9a9a"
+      android:strokeColor="#00000000"/>
+  <path
+      android:pathData="M3.333,288.667L3.667,289.333L3.333,288.667z"
+      android:fillColor="#a7a7a7"
+      android:strokeColor="#00000000"/>
+  <path
+      android:pathData="M4,288L5,292L6,292L4,288z"
+      android:fillColor="#585858"
+      android:strokeColor="#00000000"/>
+  <path
+      android:pathData="M275.333,288.667L275.667,289.333L275.333,288.667z"
+      android:fillColor="#a0a0a0"
+      android:strokeColor="#00000000"/>
+  <path
+      android:pathData="M274,290L268,298C271.152,296.089 274.329,293.957 274,290z"
+      android:fillColor="#919191"
+      android:strokeColor="#00000000"/>
+  <path
+      android:pathData="M6,292L10,297L6,292z"
+      android:fillColor="#989898"
+      android:strokeColor="#00000000"/>
+  <path
+      android:pathData="M10,297L13,299L10,297z"
+      android:fillColor="#959595"
+      android:strokeColor="#00000000"/>
+  <path
+      android:pathData="M263,299L263,300L268,297L263,299z"
+      android:fillColor="#5d5d5d"
+      android:strokeColor="#00000000"/>
+  <path
+      android:pathData="M13.667,299.333L14.333,299.667L13.667,299.333z"
+      android:fillColor="#959595"
+      android:strokeColor="#00000000"/>
+  <path
+      android:pathData="M15,300L15,301L19,301L15,300z"
+      android:fillColor="#868686"
+      android:strokeColor="#00000000"/>
+  <path
+      android:pathData="M19,300L19,301L260,301L238,300L189,300L19,300z"
+      android:fillColor="#585858"
+      android:strokeColor="#00000000"/>
+  <path
+      android:pathData="M260,300L260,301L263,301L260,300z"
+      android:fillColor="#929292"
+      android:strokeColor="#00000000"/>
+  <path
+      android:pathData="M19,301L19,302L259,302L237,301L188,301L19,301z"
+      android:fillColor="#bcbcbc"
+      android:strokeColor="#00000000"/>
 </vector>
