--- a/app/src/main/res/layout/activity_atur_discount_part_.xml
+++ b/app/src/main/res/layout/activity_atur_discount_part_.xml
@@ -129,6 +129,7 @@
                         android:layout_height="wrap_content"
                         android:hint="DISCOUNT PART"
                         android:inputType="number"
+                        android:maxLength="5"
                         android:textSize="14sp" />
 
                 </android.support.design.widget.TextInputLayout>
