--- a/app/src/main/res/drawable/ic_note_fill.xml
+++ b/app/src/main/res/drawable/ic_note_fill.xml
@@ -1,36 +1,243 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="512dp"
-    android:height="512dp"
-    android:viewportWidth="512"
-    android:viewportHeight="512">
+    android:width="315dp"
+    android:height="286dp"
+    android:viewportWidth="315"
+    android:viewportHeight="286">
+
   <path
-      android:fillColor="#FF000000"
-      android:pathData="M418.5,75.219c0,-13.652 -11.067,-24.72 -24.721,-24.72H118.221c-13.653,0 -24.721,11.067 -24.721,24.72V437.78c0,13.652 11.068,24.72 24.721,24.72H393.78c13.653,0 24.721,-11.067 24.721,-24.72V75.219zM402.5,437.26c0,4.551 -3.689,8.239 -8.24,8.239H117.74c-4.551,0 -8.24,-3.688 -8.24,-8.239V74.739c0,-4.55 3.689,-8.239 8.24,-8.239h276.52c4.551,0 8.24,3.689 8.24,8.239V437.26z"/>
+      android:pathData="M95.04,20.742C81.61,26.136 85.75,66.593 104.985,58.852C111.871,56.08 110.453,50.013 111.129,44C112.275,33.795 112.461,13.745 95.04,20.742M188.004,20.653C173.801,25.163 177.358,64.717 195.999,59.427C204.198,57.1 203.37,49.737 204.129,43C205.336,32.285 204.584,15.388 188.004,20.653z"
+      android:fillColor="#ffffff"
+      android:strokeColor="#00000000"/>
   <path
-      android:fillColor="#FF000000"
-      android:pathData="M134.5,248.5h247v16h-247z"/>
+      android:pathData="M98,26L98,27L102,27L98,26z"
+      android:fillColor="#a9a8a8"
+      android:strokeColor="#00000000"/>
   <path
-      android:fillColor="#FF000000"
-      android:pathData="M134.5,207.5h247v16h-247z"/>
+      android:pathData="M191,26L191,27L194,27L191,26z"
+      android:fillColor="#a3a2a2"
+      android:strokeColor="#00000000"/>
   <path
-      android:fillColor="#FF000000"
-      android:pathData="M134.5,289.5h247v16h-247z"/>
+      android:pathData="M97.318,28.032C91.982,31.495 93.213,60.004 103.566,52.972C108.959,49.308 107.888,21.171 97.318,28.032M189.318,28.032C183.987,31.492 185.05,59.973 195.682,52.972C201,49.47 199.899,21.164 189.318,28.032z"
+      android:fillColor="#231f20"
+      android:strokeColor="#00000000"/>
   <path
-      android:fillColor="#FF000000"
-      android:pathData="M134.5,330.5h247v17h-247z"/>
+      android:pathData="M195,27L196,28L195,27z"
+      android:fillColor="#807d7e"
+      android:strokeColor="#00000000"/>
   <path
-      android:fillColor="#FF000000"
-      android:pathData="M134.5,371.5h247v17h-247z"/>
+      android:pathData="M94,30L94,51L95,51L94,30z"
+      android:fillColor="#686566"
+      android:strokeColor="#00000000"/>
   <path
-      android:fillColor="#FF000000"
-      android:pathData="M153,109.74m-12.36,0a12.36,12.36 0,1 1,24.72 0a12.36,12.36 0,1 1,-24.72 0"/>
+      android:pathData="M106,30L106,50L107,50L106,30z"
+      android:fillColor="#b9b7b7"
+      android:strokeColor="#00000000"/>
   <path
-      android:fillColor="#FF000000"
-      android:pathData="M194.2,109.74m-12.36,0a12.36,12.36 0,1 1,24.72 0a12.36,12.36 0,1 1,-24.72 0"/>
+      android:pathData="M186,30L186,51L187,51L186,30z"
+      android:fillColor="#838182"
+      android:strokeColor="#00000000"/>
   <path
-      android:fillColor="#FF000000"
-      android:pathData="M383.72,109.74c0,6.826 -5.536,12.36 -12.359,12.36c-6.824,0 -12.36,-5.534 -12.36,-12.36c0,-6.826 5.536,-12.36 12.36,-12.36C378.184,97.38 383.72,102.914 383.72,109.74z"/>
+      android:pathData="M93,31L93,50L94,50L93,31z"
+      android:fillColor="#dadada"
+      android:strokeColor="#00000000"/>
   <path
-      android:fillColor="#FF000000"
-      android:pathData="M342.52,109.74c0,6.826 -5.536,12.36 -12.359,12.36c-6.824,0 -12.36,-5.534 -12.36,-12.36c0,-6.826 5.536,-12.36 12.36,-12.36C336.984,97.38 342.52,102.914 342.52,109.74z"/>
+      android:pathData="M198,31L198,50L199,50L198,31z"
+      android:fillColor="#636060"
+      android:strokeColor="#00000000"/>
+  <path
+      android:pathData="M205,38L206,39L205,38z"
+      android:fillColor="#929292"
+      android:strokeColor="#00000000"/>
+  <path
+      android:pathData="M112,39L112,50L113,50L112,39z"
+      android:fillColor="#4e4b4b"
+      android:strokeColor="#00000000"/>
+  <path
+      android:pathData="M180,39L180,50L181,50L180,39z"
+      android:fillColor="#474445"
+      android:strokeColor="#00000000"/>
+  <path
+      android:pathData="M204,39L204,50L205,50L204,39z"
+      android:fillColor="#6d6a6b"
+      android:strokeColor="#00000000"/>
+  <path
+      android:pathData="M88,40L88,51L89,51L88,40z"
+      android:fillColor="#9d9c9c"
+      android:strokeColor="#00000000"/>
+  <path
+      android:pathData="M111,40L111,51L112,51L111,40z"
+      android:fillColor="#c9c8c8"
+      android:strokeColor="#00000000"/>
+  <path
+      android:pathData="M205,42C204.812,64.656 180.203,64.657 180,42L113,42C112.812,64.45 88.066,64.906 88,42C80.021,42 65.332,39.125 59.228,45.228C52.646,51.811 56,69.34 56,78L56,168C56,181.056 54.567,195.045 56.185,208C56.966,214.252 60.362,219.445 67,219.945C107.491,222.994 149.381,220 190,220C200.158,220 224.296,224.438 231.347,215.786C238.029,207.588 234,186.136 234,176L234,85C234,75.011 237.473,56.964 232.821,48.019C228.152,39.04 213.333,42 205,42z"
+      android:fillColor="#231f20"
+      android:strokeColor="#00000000"/>
+  <path
+      android:pathData="M111.333,51.667L111.667,52.333L111.333,51.667z"
+      android:fillColor="#757273"
+      android:strokeColor="#00000000"/>
+  <path
+      android:pathData="M203.333,52.667L203.667,53.333L203.333,52.667z"
+      android:fillColor="#706d6e"
+      android:strokeColor="#00000000"/>
+  <path
+      android:pathData="M98,54L98,55L102,55L98,54z"
+      android:fillColor="#686566"
+      android:strokeColor="#00000000"/>
+  <path
+      android:pathData="M190,54L190,55L195,55L190,54z"
+      android:fillColor="#706d6e"
+      android:strokeColor="#00000000"/>
+  <path
+      android:pathData="M91,56L92,57L91,56z"
+      android:fillColor="#8c8a8a"
+      android:strokeColor="#00000000"/>
+  <path
+      android:pathData="M92,57L93,58L92,57z"
+      android:fillColor="#8f8d8e"
+      android:strokeColor="#00000000"/>
+  <path
+      android:pathData="M93.667,58.333L94.333,58.667L93.667,58.333z"
+      android:fillColor="#c1c0c0"
+      android:strokeColor="#00000000"/>
+  <path
+      android:pathData="M106,58L107,59L106,58z"
+      android:fillColor="#9e9d9d"
+      android:strokeColor="#00000000"/>
+  <path
+      android:pathData="M95.667,59.333L96.333,59.667L95.667,59.333z"
+      android:fillColor="#b4b3b3"
+      android:strokeColor="#00000000"/>
+  <path
+      android:pathData="M103.667,59.333L104.333,59.667L103.667,59.333z"
+      android:fillColor="#9d9b9c"
+      android:strokeColor="#00000000"/>
+  <path
+      android:pathData="M187.667,59.333L188.333,59.667L187.667,59.333z"
+      android:fillColor="#a9a7a7"
+      android:strokeColor="#00000000"/>
+  <path
+      android:pathData="M196.667,59.333L197.333,59.667L196.667,59.333z"
+      android:fillColor="#797677"
+      android:strokeColor="#00000000"/>
+  <path
+      android:pathData="M97,60L97,61L102,61L97,60z"
+      android:fillColor="#898787"
+      android:strokeColor="#00000000"/>
+  <path
+      android:pathData="M189,60L189,61L195,61L189,60z"
+      android:fillColor="#898687"
+      android:strokeColor="#00000000"/>
+  <path
+      android:pathData="M75,67L75,68L215,68C204.02,63.393 184.944,67 173,67L75,67z"
+      android:fillColor="#504d4e"
+      android:strokeColor="#00000000"/>
+  <path
+      android:pathData="M74,68L74,209L75,209L75,110C75,98.056 78.607,78.98 74,68z"
+      android:fillColor="#4c4949"
+      android:strokeColor="#00000000"/>
+  <path
+      android:pathData="M75,68L75,208L76,208L76,69L215,69C204.02,64.393 184.944,68 173,68L75,68z"
+      android:fillColor="#dcdcdc"
+      android:strokeColor="#00000000"/>
+  <path
+      android:pathData="M215,68L215,209L216,209L216,110C216,98.056 219.607,78.98 215,68z"
+      android:fillColor="#868484"
+      android:strokeColor="#00000000"/>
+  <path
+      android:pathData="M76,69L76,208L215,208L215,69L76,69z"
+      android:fillColor="#ffffff"
+      android:strokeColor="#00000000"/>
+  <path
+      android:pathData="M94,99L94,100L197,100L166,99L94,99z"
+      android:fillColor="#cfcfcf"
+      android:strokeColor="#00000000"/>
+  <path
+      android:pathData="M93,100L93,101L197,101L165,100L93,100z"
+      android:fillColor="#363333"
+      android:strokeColor="#00000000"/>
+  <path
+      android:pathData="M197,100L198,101L197,100z"
+      android:fillColor="#9d9b9c"
+      android:strokeColor="#00000000"/>
+  <path
+      android:pathData="M92,101C92.761,110.762 110.644,107 118,107L178,107C182.105,107 195.303,109.133 197.914,105.416C200.83,101.262 193.021,101.015 191,101.001C180.668,100.93 170.333,101 160,101L132,101L92,101z"
+      android:fillColor="#231f20"
+      android:strokeColor="#00000000"/>
+  <path
+      android:pathData="M198,101L199,102L198,101z"
+      android:fillColor="#989696"
+      android:strokeColor="#00000000"/>
+  <path
+      android:pathData="M91,102L91,105L92,105L91,102z"
+      android:fillColor="#7d7a7b"
+      android:strokeColor="#00000000"/>
+  <path
+      android:pathData="M93,107L93,108L197,108L165,107L93,107z"
+      android:fillColor="#a09e9e"
+      android:strokeColor="#00000000"/>
+  <path
+      android:pathData="M93,134L93,135L197,135L165,134L93,134z"
+      android:fillColor="#a2a0a0"
+      android:strokeColor="#00000000"/>
+  <path
+      android:pathData="M93,135L93,136L198,136L166,135L93,135z"
+      android:fillColor="#373434"
+      android:strokeColor="#00000000"/>
+  <path
+      android:pathData="M92,136L92,141L174,141C180.636,141 197.604,144.362 199,136L92,136z"
+      android:fillColor="#231f20"
+      android:strokeColor="#00000000"/>
+  <path
+      android:pathData="M91,137L91,140L92,140L91,137z"
+      android:fillColor="#787676"
+      android:strokeColor="#00000000"/>
+  <path
+      android:pathData="M198,140L199,141L198,140z"
+      android:fillColor="#8b8889"
+      android:strokeColor="#00000000"/>
+  <path
+      android:pathData="M93,141L93,142L198,142L166,141L93,141z"
+      android:fillColor="#3f3c3c"
+      android:strokeColor="#00000000"/>
+  <path
+      android:pathData="M94,142L94,143L197,143L166,142L94,142z"
+      android:fillColor="#b6b5b5"
+      android:strokeColor="#00000000"/>
+  <path
+      android:pathData="M94,162L94,163L197,163L166,162L94,162z"
+      android:fillColor="#c2c1c2"
+      android:strokeColor="#00000000"/>
+  <path
+      android:pathData="M93,163L93,164L198,164L166,163L93,163z"
+      android:fillColor="#464243"
+      android:strokeColor="#00000000"/>
+  <path
+      android:pathData="M92,164C92.761,173.762 110.644,170 118,170L178,170C182.098,170 195.155,172.129 197.762,168.416C200.703,164.229 193.106,164.015 191,164.001C180.668,163.93 170.333,164 160,164L132,164L92,164z"
+      android:fillColor="#231f20"
+      android:strokeColor="#00000000"/>
+  <path
+      android:pathData="M198,164L199,165L198,164z"
+      android:fillColor="#929091"
+      android:strokeColor="#00000000"/>
+  <path
+      android:pathData="M91,165L91,168L92,168L91,165z"
+      android:fillColor="#797777"
+      android:strokeColor="#00000000"/>
+  <path
+      android:pathData="M198,168L199,169L198,168z"
+      android:fillColor="#7a7778"
+      android:strokeColor="#00000000"/>
+  <path
+      android:pathData="M93,170L93,171L197,171L165,170L93,170z"
+      android:fillColor="#979495"
+      android:strokeColor="#00000000"/>
+  <path
+      android:pathData="M75,208L75,209L215,209C204.02,204.393 184.944,208 173,208L75,208z"
+      android:fillColor="#c1c0c0"
+      android:strokeColor="#00000000"/>
+  <path
+      android:pathData="M75,209L75,210L215,210C204.02,205.393 184.944,209 173,209L75,209z"
+      android:fillColor="#454242"
+      android:strokeColor="#00000000"/>
 </vector>
