--- a/app/src/main/res/drawable/icon_kontak.xml
+++ b/app/src/main/res/drawable/icon_kontak.xml
@@ -2,8 +2,8 @@
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
-        android:drawable="@drawable/ic_camera_fill"
+        android:drawable="@drawable/ic_contact_phone"
         android:width="30dp"
-        android:height="25dp" />
+        android:height="30dp" />
 
 </layer-list>
