--- a/app/src/main/res/layout/activity_atur_pembayaran_.xml
+++ b/app/src/main/res/layout/activity_atur_pembayaran_.xml
@@ -143,7 +143,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:enabled="false"
-                        android:hint="NO. TRACK"
+                        android:hint="NO. TRACE"
                         android:inputType="number"
                         android:textSize="14sp" />
 
