--- a/app/src/main/res/layout/activity_daftar_jual_part_.xml
+++ b/app/src/main/res/layout/activity_daftar_jual_part_.xml
@@ -13,7 +13,27 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical">
+            android:orientation="vertical"
+            android:layout_marginTop="5dp"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp">
+
+            <android.support.design.widget.TextInputLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="10dp"
+                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">
+
+                <EditText
+                    android:id="@+id/et_totalHarga_jualPart"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="10dp"
+                    android:enabled="false"
+                    android:hint="TOTAL"
+                    android:textSize="20sp" />
+
+            </android.support.design.widget.TextInputLayout>
 
             <android.support.v7.widget.RecyclerView
                 android:id="@+id/recyclerView_jualPart"
@@ -42,18 +62,13 @@
         android:layout_height="?attr/actionBarSize"
         android:theme="@style/AppTheme.AppBarOverlay">
 
+        <FrameLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
 
-        <TextView
-            android:id="@+id/tv_totalHarga_jualPart"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="20dp"
-            android:layout_marginTop="10dp"
-            android:text="TOTAL : "
-            android:textStyle="bold"
-            android:textColor="@android:color/white"
-            android:textSize="20sp" />
+            <include layout="@layout/toolbar"/>
 
+        </FrameLayout>
 
     </android.support.design.widget.AppBarLayout>
 
