--- a/app/src/main/res/layout/activity_detail_part_diterima.xml
+++ b/app/src/main/res/layout/activity_detail_part_diterima.xml
@@ -29,7 +29,6 @@
             android:layout_marginTop="10dp"
             android:layout_marginEnd="10dp"
             android:orientation="vertical"
-            android:padding="10sp"
             tools:context=".modules.sparepart.terima_part.DetailPartDiterima">
 
 
@@ -125,9 +124,8 @@
                 android:orientation="horizontal">
 
                 <TextView
-                    android:layout_width="90dp"
+                    android:layout_width="150dp"
                     android:layout_height="wrap_content"
-                    android:layout_weight="1"
                     android:textStyle="bold"
                     android:textColor="@color/red_400"
                     android:layout_gravity="center"
@@ -165,6 +163,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:inputType="numberDecimal"
+                        android:maxLength="5"
                         android:textSize="14sp" />
 
                 </android.support.design.widget.TextInputLayout>
@@ -251,6 +250,7 @@
                         android:layout_gravity="start"
                         android:background="@drawable/btn_rounded_accent"
                         android:text="@string/simpan_uppercase"
+                        android:gravity="center"
                         android:textColor="@android:color/white" />
 
                     <android.support.design.widget.FloatingActionButton
@@ -268,7 +268,8 @@
                 android:id="@+id/recyclerView_terimaPart"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:padding="5dp" />
+                android:layout_marginTop="10dp"
+                android:layout_marginBottom="10dp"/>
 
         </LinearLayout>
 
