--- a/app/src/main/res/layout/item_hutang.xml
+++ b/app/src/main/res/layout/item_hutang.xml
@@ -30,29 +30,10 @@
             <TableRow>
 
                 <TextView
-                    android:id="@+id/tv_namaP_pembayaran"
+                    android:id="@+id/tv_nama_hutang"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Nama Pelanggan"
-                    android:textStyle="bold" />
-
-
-            </TableRow>
-
-            <TableRow android:layout_marginTop="@dimen/spacing_medium">
-
-                <TextView
-                    android:id="@+id/tv_noPhone_pembayaran"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="No. Ponsel"
-                    android:textStyle="bold" />
-
-                <TextView
-                    android:id="@+id/tv_nopol_pembayaran"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="No. Polisi"
+                    android:text="Nama Terhutang"
                     android:textStyle="bold" />
 
             </TableRow>
@@ -60,17 +41,17 @@
             <TableRow android:layout_marginTop="@dimen/spacing_medium">
 
                 <TextView
-                    android:id="@+id/tv_tipePembayaran_pembayaran"
+                    android:id="@+id/tv_tipe_hutang"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Tipe Pemabyaran"
+                    android:text="Tipe Hutang"
                     android:textStyle="bold" />
 
                 <TextView
-                    android:id="@+id/tv_user_pembayaran"
+                    android:id="@+id/tv_tglJatuhTempo_hutang"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="User"
+                    android:text="Tanggal Jatuh Tempo"
                     android:textStyle="bold" />
 
             </TableRow>
@@ -78,18 +59,9 @@
             <TableRow android:layout_marginTop="@dimen/spacing_medium">
 
                 <TextView
-                    android:id="@+id/tv_waktuPembayaran_pembayaran"
+                    android:id="@+id/tv_total_hutang"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Waktu Pembayaran"
-                    android:textColor="@color/red_400"
-                    android:textStyle="bold" />
-
-                <TextView
-                    android:id="@+id/tv_total_pembayaran"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:textColor="@color/red_400"
                     android:text="Total"
                     android:textStyle="bold" />
 
