--- a/app/src/main/res/layout/item_jurnal.xml
+++ b/app/src/main/res/layout/item_jurnal.xml
@@ -4,7 +4,7 @@
     xmlns:card_view="http://schemas.android.com/tools"
     android:id="@+id/cardView"
     android:layout_width="match_parent"
-    android:layout_height="120dp"
+    android:layout_height="wrap_content"
     android:layout_gravity="center"
     android:layout_marginLeft="7dp"
     android:layout_marginTop="4dp"
@@ -12,93 +12,81 @@
     android:layout_marginBottom="4dp"
     android:layout_weight="5"
     android:padding="10dp"
-    app:cardElevation="10dp"
+    app:cardElevation="2dp"
     app:cardCornerRadius="10dp">
 
-    <LinearLayout
+    <FrameLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_gravity="center"
-        android:gravity="center"
-        android:orientation="vertical"
-        android:padding="10dp">
+        android:layout_height="match_parent">
 
-        <LinearLayout
+
+        <TableLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
+            android:layout_height="match_parent"
+            android:gravity="center"
+            android:padding="10dp"
+            android:stretchColumns="*">
 
-            <LinearLayout
-                android:layout_width="150dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:orientation="vertical">
+            <TableRow>
 
                 <TextView
-                    android:id="@+id/tv_tanggal_jurnal"
+                    android:id="@+id/tv_tgl_jurnal"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:text="Tanggal"
+                    android:text="DD/MM - DD/MM"
                     android:textStyle="bold" />
 
                 <TextView
-                    android:id="@+id/tv_pos_jurnal"
+                    android:id="@+id/tv_aktifitas_jurnal"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:text="Pos"
-                    android:textSize="14sp"
+                    android:text="Aktifitas"
                     android:textStyle="bold" />
 
-                <TextView
-                    android:id="@+id/tv_ket_jurnal"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:text="Keterangan"
-                    android:textSize="14sp"
-                    android:textStyle="bold" />
+            </TableRow>
 
-                <TextView
-                    android:id="@+id/tv_total_jurnal"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:text="Total"
-                    android:textSize="14sp"
-                    android:textStyle="bold" />
-
-
-            </LinearLayout>
-
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:orientation="vertical">
+            <TableRow android:layout_marginTop="@dimen/spacing_medium">
 
                 <TextView
                     android:id="@+id/tv_transaksi_jurnal"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:text="Jenis Transaksi"
+                    android:text="Transaksi"
                     android:textStyle="bold" />
+
+            </TableRow>
+
+            <TableRow android:layout_marginTop="@dimen/spacing_medium">
+
+                <TextView
+                    android:id="@+id/tv_ket_jurnal"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Keterangan"
+                    android:textStyle="bold" />
+
+            </TableRow>
+
+            <TableRow android:layout_marginTop="@dimen/spacing_medium">
 
                 <TextView
                     android:id="@+id/tv_pembayaran_jurnal"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:layout_marginTop="35dp"
                     android:text="Pembayaran"
-                    android:textSize="14sp"
                     android:textStyle="bold" />
 
-            </LinearLayout>
+                <TextView
+                    android:id="@+id/tv_nominal_jurnal"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Nominal"
+                    android:textStyle="bold" />
 
-        </LinearLayout>
-    </LinearLayout>
+            </TableRow>
+
+        </TableLayout>
+
+    </FrameLayout>
 
 </android.support.v7.widget.CardView>
